<?xml version="1.0" encoding="utf-8"?>
<!--
/*
* Copyright (C) 2008 The Android Open Source Project
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- General -->
    <skip />
    <!-- Application name -->
    <string name="launcher">Launcher</string>
    <!-- Default folder name -->
    <string name="folder_name">Folder</string>
    <!-- Title of dialog that appears after user selects Wallpaper from menu -->
    <string name="chooser_wallpaper">Select wallpaper from</string>
    <!-- Button label on Wallpaper Gallery screen; user selects this button to set a specific wallpaper -->
    <string name="wallpaper_instructions">Set wallpaper</string>
    <!-- Option in "Select wallpaper from" dialog box -->
    <string name="pick_wallpaper">Wallpaper gallery</string>
    <!-- Displayed when user selects a shortcut for an app that was uninstalled -->
    <string name="activity_not_found">Application is not installed on your phone.</string>
    <!-- List item for configuring the current wallpaper -->
    <string name="configure_wallpaper">Configure&#8230;</string>

    <!-- Folders -->
    <skip />
    <!-- Label of Folder name field in Rename folder dialog box -->
    <string name="rename_folder_label">Folder name</string>
    <!-- Title of dialog box -->
    <string name="rename_folder_title">Rename folder</string>
    <!-- Buttons in Rename folder dialog box -->
    <string name="rename_action">OK</string>
    <!-- Buttons in Rename folder dialog box -->
    <string name="cancel_action">Cancel</string>

    <!-- Shortcuts -->
    <skip />
    <!-- Title of dialog box -->
    <string name="menu_item_add_item">Add to Home screen</string>
    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all apps -->
    <string name="group_applications">Applications</string>
    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all shortcuts -->
    <string name="group_shortcuts">Shortcuts</string>
    <!-- Options in "Add to Home" dialog box; Title of the search gadget -->
    <string name="group_search">Search</string>
    <!-- Options in "Add to Home" dialog box; Title of the folder gadget -->
    <string name="group_folder">New folder</string>
    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all live folders -->
    <string name="group_live_folders">Folders</string>
    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all widgets/gadgets -->
    <string name="group_widgets">Widgets</string>
    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of apps that can set the wallpaper-->
    <string name="group_wallpapers">Wallpapers</string>
    <!-- Options in "Add to Home" dialog box; Name of the Folder widget-->
    <string name="add_folder">Folder</string>
    <!-- Options in "Add to Home" dialog box; Name of the Clock widget-->
    <string name="add_clock">Clock</string>
    <!-- Options in "Add to Home" dialog box; Name of the Picture frame widget-->
    <string name="add_photo_frame">Picture frame</string>
    <!-- Options in "Add to Home" dialog box; Name of the global search widget-->
    <string name="add_search">Search</string>
    <!-- Error message when user has filled a home screen, possibly not used -->
    <string name="out_of_space">No more room on this Home screen.</string>
    <!-- Message displayed when a shortcut is created by an external application -->
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <!-- Message displayed when a shortcut is uninstalled by an external application -->
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <!-- Message displayed when an external application attemps to create a shortcut that already exists -->
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>

    <!-- Title of dialog when user is selecting shortcut to add to homescreen -->
    <string name="title_select_shortcut">Select shortcut</string>
    <!-- Title of dialog when user is selecting live folder to add to homescreen -->
    <string name="title_select_live_folder">Select folder</string>

    <!-- Menus items: -->
    <skip />
    <!-- Verb, menu item used to add an item on the desktop -->
    <string name="menu_add">Add</string>
    <!-- Noun, menu item used to set the desktop's wallpaper -->
    <string name="menu_wallpaper">Wallpaper</string>
    <!-- Verb, menu item used to initiate global search -->
    <string name="menu_search">Search</string>
    <!-- Noun, menu item used to show the gestures settings -->
    <string name="menu_gestures">Gestures</string>
    <!-- Noun, menu item used to show the system settings -->
    <string name="menu_settings">Settings</string>
    <!-- Noun, menu item used to show the custom dockbars -->
    <string name="menu_preferences">Customize</string>

    <!-- Permissions: -->
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an application to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows an application to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows an application to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows an application to change the settings and
        shortcuts in Home.</string>

    <!-- Widgets: -->
    <skip />    

    <!-- TODO: Determine if this can be removed.
         This is the hint text shown in the search widget, before text is entered.
         This translation SHOULD MATCH the string "search_hint" which is found in 
         GoogleSearch/res/values/strings.xml -->
    <string name="search_hint">Google Search</string>

    <!-- Text to show user in place of a gadget when we can't display it properly -->
    <string name="gadget_error_text">Problem loading widget</string>
    
    <!-- Default URL -->
    <string name="default_browser_url" translatable="false">http://www.google.com/</string>
    
    <!-- Sense theme -->
    <string name="phone" translatable="false" >Phone</string>
    
    <!-- Themes -->
    <string name="select_style" translatable="false">Select Style</string>
    <string name="apply" translatable="false">Apply</string>
    <string name="gingerbread" translatable="false">Gingerbread</string>
    <string name="froyo" translatable="false">Froyo</string>
    <string name="sense" translatable="false">Sense</string>
    <string name="slate" translatable="false">Slate</string>
    <string name="music" translatable="false">Music</string>
    <string name="blackboard" translatable="false">Blackboard</string>
    <string name="espresso" translatable="false">Espresso</string>
    <string name="blur" translatable="false">Blur</string>
    <string name="ninja" translatable="false">Ninja</string>
    <string name="samurai" translatable="false">Samurai</string>
    <string name="pro" translatable="false">Pro</string>
    
    <!-- Preferences (Keys from http://www.random.org/strings/)-->
    <string name="preference_1">Auto-rotate screen</string>
    <string name="preference_1_key" translatable="false">hvgZBpdwE8</string>
    <string name="preference_2">Change wallpaper</string>
    <string name="preference_2_key" translatable="false">2LSNY2FTAX</string>
    <string name="preference_3">Hide icon labels</string>
    <string name="preference_3_key" translatable="false">zjuNhyRn1q</string>
    <string name="preference_4">Hide screen indicators</string>
    <string name="preference_4_key" translatable="false">1OprmMIWtQ</string>
    <string name="preference_5">Enable screen bounce</string>
    <string name="preference_5_key" translatable="false">CalHW8GlsT</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    
</resources>
